chungnam/1_cicd/wsc2025-argocd-repo/manifest/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy
  namespace: wsc2025
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: 323974325951.dkr.ecr.ap-southeast-1.amazonaws.com/app-repo:v1.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 80
