chungnam/1_cicd/wsc2025-argocd-repo/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: wsc2025
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: nginx
